public/static/css/app.css
html, body {
    background-color: black;
    color: white !important;
}

h1, h2, h3, h4, h5, h6, th, p, span, td {
    color: white !important;
}

.modal-card-body {
    background: black;
    border-radius: 5px;
}

a {
    color: white !important;
    padding-bottom: 3px;
    text-decoration: underline;
}

h1.title {
    margin-top: 10px;
    font-size: 71px;
    display: block;
    text-align: center;
    white-space: nowrap;
}

.subtitle {
    color: white !important;
    margin-top: 30px;
    display: block;
    text-align: center;
}

.content {
    color: white;
}

.table {
    background: rgba(200, 200, 200, 0.05);
    border: 0;
    font-size: 14px;
}

.table .txid {
    font-family: monospace;
    max-width: 200px;
    overflow: scroll
}

.table .magicnumber {
    font-family: monospace;
}

.table .short {
    max-width: 200px;
    overflow: hidden;
}

.table .mongo {
    font-family: monospace;
}

.table td.created {
    white-space: nowrap;
    width: 150px;
    max-width: 150px;
    min-width: 150px;
}

.table td.reward {
    width: 90px;
    max-width: 90px;
    min-width: 90px;
}

.table td.target {
    font-family: monospace;
    width: 120px;
    max-width: 120px;
    min-width: 120px;
}

.level {
    margin-top: 70px;
    padding-bottom: 30px;
}

.level .title {
    margin-bottom: 12px !important;
}

.highlight {
    background: rgba(61, 84, 99, 0.5);
    padding: 2px 5px;
    border-radius: 4px;
}

.blockviz-wrapper {
    height: 127px;
    overflow: hidden;
    position: relative;
}

.blockviz-wrapper.extended {
    height: auto;
}

.blockviz-wrapper .toggle {
    position: absolute;
    opacity: 0;
    bottom: 0px;
    z-index: 99;
    right: 0;
    transition: opacity 0.25s;
}

.blockviz-wrapper:hover .toggle {
    opacity: 0.5;
}

.blockviz {
    width: 100%;
    table-layout: fixed;
}

.blockviz .segment {
    padding: 0;
    width: 10%;
    overflow: hidden;
}

.blockviz .segment .tx {
    background: white;
    width: 5px;
    margin: 1px;
    float: left;
}

.blockviz .segment .tx.mined-true {
    opacity: 1;
}

.blockviz .segment .tx.power-0 { background: #CAFE89; border: 1px solid #CAFE89; }
.blockviz .segment .tx.power-1 { background: #CAFE89; border: 1px solid #CAFE89; }
.blockviz .segment .tx.power-2 { background: #9BFFA9; border: 1px solid #9BFFA9; }
.blockviz .segment .tx.power-3 { background: #9BFFA9; border: 1px solid #9BFFA9; }
.blockviz .segment .tx.power-4 { background: #6EFECA; border: 1px solid #6EFECA; }
.blockviz .segment .tx.power-5 { background: #6EFECA; border: 1px solid #6EFECA; }
.blockviz .segment .tx.power-6 { background: #48F9E8; border: 1px solid #48F9E8; }
.blockviz .segment .tx.power-7 { background: #48F9E8; border: 1px solid #48F9E8; }
.blockviz .segment .tx.power-8 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-9 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-10 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-11 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-12 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-13 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-14 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-15 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-16 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-17 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-18 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-19 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-20 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-21 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-22 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-23 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-24 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-25 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-26 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-27 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-28 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-29 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-30 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-31 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-32 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-33 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-34 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-35 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-36 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-37 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-38 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-39 { background: #41F2FF; border: 1px solid #41F2FF; }
.blockviz .segment .tx.power-40 { background: #41F2FF; border: 1px solid #41F2FF; }

.blockviz .segment .tx.mined-false {
    background: none;
}

.clear {
    clear: both;
}

hr {
    opacity: 0;
    margin: 20px 0;
}

.table td, .table th {
    border: 1px solid black !important;
}


@media screen and (min-width: 1025px) {
    #add-magic {
        position: absolute;
        top: 0;
        right: 0;
        text-decoration: none;
    }
}

@media screen and (max-width: 1024px) {
    h1.title {
        margin: 0px;
        font-size: 68px;
    }

    .level {
        margin-top: 50px;
        padding-bottom: 20px;
    }

    #add-magic {
        display: none;
        text-align: center;
        display: block;
        margin: 0;
        padding: 0;
        text-decoration: none;
    }

    .blockviz .segment .tx {
        width: 3px;
    }
}

@media screen and (max-width: 540px) {
    h1.title {
        margin: 0px;
        font-size: 58px;
    }
    .subtitle {
        font-size: 19px;
    }

    .level {
        margin-top: 40px;
        padding-bottom: 10px;
    }

    .level .title {
        font-size: 21px;
    }

    .blockviz .segment .tx {
        width: 2px;
    }
}

@media screen and (max-width: 400px) {
    h1.title {
        margin: 0;
        font-size: 44px;
    }
    .subtitle {
        font-size: 16px;
    }
}

#add-magic-modal textarea {
    background: rgba(100, 100, 100, 0.1);
    border: none;
    padding: 6px 10px;
    border-radius: 5px;
    color: white;
    font-size: 15px;
    width: 100%;
    min-height: 140px;
    resize: none;
}

#add-magic-modal input[type="text"] {
    background: rgba(100, 100, 100, 0.1);
    padding: 7px 10px;
    border: none;
    border-radius: 5px;
    color: white;
    font-size: 15px;
    width: 100px;
}

#add-magic-modal #hash {
    width: 100%;
    max-width: 100%;
}

#add-magic-modal .modal-card-body .price {
    width: 90px;
    padding-left: 30px;
}

#add-magic-modal .modal-card-body .dollar-sign {
    margin-right: -21px;
    margin-left: 11px;
}

#add-magic-modal input[type="button"] {
    border: 1px solid red;
    background: rgba(100, 100, 100, 0.2);
    padding: 7px 13px;
    border-radius: 5px;
    border: none;
    color: white;
    font-size: 15px;
}

#add-magic-modal input[type="button"]:hover {
    background: rgba(100, 100, 100, 0.3);
    cursor: pointer;
}


.hash-wrapper {
    margin: 5px 0;
    font-family: monospace;
    font-size: 14px;
}

#add-magic-modal .money-button.is-active {
    padding: 0;
    margin-top: 15px;
    margin-left: 12px;
    margin-bottom: -8px;
    height: 46px;
    vertical-align: bottom;
}

